<resources>
    <string-array name="spinner_luxian">
        <item>呆呆解析</item>
        <item>47Ak解析</item>
        <item>思古解析</item>
        <item>百域解析</item>
        <item>无名解析</item>
        <item>瑟瑟解析</item>
        <item>北漂鱼解析</item>
        <item>177537解析</item>
    </string-array>
    <string-array name="video_web">
        <item>iqiyi.com/v_</item>
        <item>youku.com/video</item>
        <item>le.com/vplay</item>
        <item>le.com/ptv</item>
        <item>qq.com/x/cover</item>
        <item>tudou.com/v</item>
        <item>56.com</item>
        <item>pptv.com/show</item>
        <item>1905.com/play</item>
        <item>bilibili.com/video/av</item>
        <item>bilibili.com/bangumi/play</item>
        <item>ku6.com</item>
        <item>wasu.cn/Play</item>
        <item>yinyuetai.com</item>
        <item>mgtv.com/b</item>
        <item>video.sina.com</item>
        <item>v.163.com</item>
        <item>fun.tv/vplay</item>
    </string-array>
    <string name="app_name">次元番</string>
    <string name="dynamic_total_guide_title">次元番需要下列权限才可正常使用</string>
    <string name="dynamic_phone_guide_title">手机/电话权限</string>
    <string name="dynamic_phone_guide_desc">校验IMEI&amp;IMSI码，防止帐号被盗。</string>
    <string name="dynamic_storage_guide_title">存储权限</string>
    <string name="dynamic_storage_guide_desc">缓存图片和视频，降低流量消耗。</string>
    <string name="dynamic_open_pm_desc">路径: 设置>应用>次元番>权限</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="giraffe_player_url_empty">请指定播放视频的地址</string>
    <string name="small_problem">出了点小问题,稍后重试\n(如果多次重试仍然错误,请尝试用浏览器观看)</string>
    <string name="can_not_play">不能播放此视频</string>
    <string name="not_support">播放器不支持此设备</string>
    <string name="permission_tip">您拒绝了权限请求,该功能不能使用</string>
    <string name="player_not_wifi">您正在使用移动网络播放视频\n可能产生较高流量费用</string>
    <string name="default_user">未登录</string>
    <string name="level_text">等级</string>
    <string name="birthday">生日</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="not_watch">尚未观看</string>
    <string name="search_hint">请输入需要搜索的关键词</string>
    <string name="home_more_search">大家都在搜</string>
    <string name="collect_hit">是否收藏《 %s 》</string>
    <string name="setting_about">设置与关于</string>
    <string name="bangumi_list">番剧列表</string>
    <string name="delete_error">删除失败</string>
    <string name="delete_history">是否清空播放记录</string>
    <string name="collect_clear">是否清空记录</string>
    <string name="def_url">http://www.baidu.com</string>
    <string name="def_title">来《次元番》的分享</string>
    <string name="def_content">次元番,专为二次元爱好者量身打造的番剧平台</string>
    <string name="item_home">主页</string>
    <string name="item_downloaded">离线缓存</string>
    <string name="item_live">电视直播</string>
    <string name="item_favourite">我的收藏</string>
    <string name="item_history">历史记录</string>
    <string name="item_settings">设置与帮助</string>
    <string name="item_app">应用推荐</string>
    <string name="new_bangumi">新番连载</string>
    <string name="more_bangmi">更多番剧</string>
    <string name="bangumi_class">番剧分类</string>
    <string name="bangumi_episode">番剧剧集</string>
    <string name="bangumi_details">番剧详情</string>
    <string name="week_date">7月7日</string>
    <string name="search_mart">搜索：%s</string>
    <string name="search_list">搜索结果列表</string>
    <string name="week_0">今天</string>
    <string name="week_1">周一</string>
    <string name="week_2">周二</string>
    <string name="week_3">周三</string>
    <string name="week_4">周四</string>
    <string name="week_5">周五</string>
    <string name="week_6">周六</string>
    <string name="week_7">周日</string>
    <string name="text_area">地区：%s</string>
    <string name="text_pf">评分：%s</string>
    <string name="text_type">类型：%s</string>
    <string name="text_info">备注：%s</string>
    <string name="string_play">立即播放</string>
    <string name="more_info">查看更多信息</string>
    <string name="more_info_sq">收起</string>
    <string name="pack_name">包名:</string>
    <string name="updatetime">更新时间:</string>
    <string name="update_nfo">更新内容:</string>
    <string name="image_cat">相关截图</string>
    <string name="back_hit">再按一次退出</string>
    <string name="player_history">播放历史</string>
    <string name="error_hit">请求网络数据出错</string>
    <string name="collect_success">本地收藏成功</string>
    <string name="collect_error">本地收藏失败</string>
    <string name="collect_repetition">请勿重复收藏</string>
    <string name="loading">正在努力加载中...</string>
    <string name="has_dixian">我是有底线的</string>
    <string name="collect">收藏</string>
    <string name="download">下载管理</string>
    <string name="share">分享</string>
    <string name="juji">剧集</string>
    <string name="more_juji">更多剧集</string>
    <string name="more_jianjie">更多简介</string>
    <string name="close_more_jianjie">收起简介</string>
    <string name="jianjie">简介</string>
    <string name="fanjutuijian">番剧推荐</string>
    <string name="apk">应用排行</string>
    <string name="game">游戏推荐</string>
    <string name="game_pc">游戏评测</string>
    <string name="acg_tree">ACG小队</string>
    <string name="load_hit_error">加载失败,请重试(｀・ω・´)</string>
    <string name="load_hit_empty">什么也没有(╯︵╰)</string>
    <string name="forget_password">忘记密码？</string>
    <string name="register_agreement">《用户协议》</string>
    <string name="sendmessage">获取验证码</string>
    <string name="cannot_verification">无法获取验证码？</string>
    <string name="menu_about_emailadress">happy1993_chen@sina.cn</string>
    <string name="menu_about_phonenumber">暂无</string>
    <string name="menu_about_qq">541361788</string>
    <string name="menu_about_web">暂无</string>
    <string name="menu_web">微信客服</string>
    <string name="non_error">发生未知错误</string>
    <string name="menu_qqnumber">QQ群</string>
    <string name="menu_phonenumber">客服电话</string>
    <string name="menu_emailadress">邮箱地址</string>
    <string name="menu_about_workingtime">工作时间：暂不确定</string>
    <string name="app_version">v1.0.0.2</string>
    <string name="menu_subapp_about_detailed">专为二次元爱好者量身打造的番剧平台，这里不仅包含时下最热门的番剧内容，更有好玩有趣的二次元游戏、应用，供你与二次元的小伙伴交流互动！次元番，欢迎喜欢二次元的你！\n\n免责声明：本程序所有数据收集自互联网公共资源，程序本身及后台不存储任何音视频数据。如果有侵犯到您的权益，请联系开发者，开发者将在第一时间下架相关音视频</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_def_player_titles">
        <item>ijkplayer</item>
        <item>系统播放器</item>
        <item>TbsVideo</item>
    </string-array>
    <string-array name="pref_def_player_values">
        <item>ijk</item>
        <item>native</item>
        <item>tbs</item>
    </string-array>
    <string-array name="pref_def_lives_titles">
        <item>爱看TV</item>
        <item>电影天堂</item>
        <item>华龙直播</item>
        <item>好趣直播</item>
    </string-array>
    <string-array name="pref_def_lives_values">
        <item>ican</item>
        <item>dytt</item>
        <item>hlzb</item>
        <item>haoqu</item>
    </string-array>
    <string-array name="pref_sync_frequency_titles">
        <item>1任务</item>
        <item>2任务</item>
        <item>3任务</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="login_hit">用户名密码不能为空</string>
    <string name="login_user">用户登录</string>
    <string name="register_user">用户注册</string>
    <string name="input_code">输入验证码</string>
    <string name="find_pass">找回密码</string>
    <string name="username_text">注册账号：</string>
    <string name="set_pwd">设置密码</string>
    <string name="about">关于</string>
    <string name="qq_group"><![CDATA[mqqapi://card/show_pslcard?src_type=internal&version=1&uin=541361788&card_type=group&source=qrcode]]></string>
    <string name="activity_not_found">未找到对应第三方应用</string>
    <string name="version_format">v_%s</string>
    <string name="feedback">意见反馈</string>
    <string name="code_scan">条码扫描</string>
    <string name="current_live">正在播放：%s</string>
    <string name="next_live">即将播放：%s</string>
    <string name="could_player">磁力云播</string>
    <string name="item_could">磁力云播</string>
    <string name="input_word">请输入需要搜索的关键字</string>
    <string name="search">搜索</string>
    <string name="colud_search_hint">支持磁力链和迅雷链接</string>
    <string name="word_notnull">搜索关键字不能为空</string>
    <string name="player">播放</string>
    <string name="finish_hit">再按一次退出应用</string>
    <string name="ranking">全站排行</string>
    <string name="time_line">播放时间表</string>
    <string name="not_more">没有更多了</string>
    <string name="item_short">短视频</string>
    <string name="s80">80s电影</string>
    <string name="bumimi">布米米</string>
    <string name="jiren">吉人动漫</string>
    <string name="biaoqing">标清</string>
    <string name="non_recom">暂无推荐视频</string>
    <string name="error_non">获取数据失败</string>
    <string name="clipboard">复制成功</string>
    <string name="clear_ok">清除成功</string>
    <string name="clear_non">无缓存需要清理</string>
    <string name="error_token">获取token失败</string>
    <string name="dm5">五弹幕</string>
    <string name="error_play_conn">获取播放地址失败</string>
    <string name="download_add">添加下载成功</string>
    <string name="not_download">该视频不支持下载</string>
    <string name="non_episode">该视频可能已经下架</string>
    <string name="video_xunlei">该视频需要使用迅雷观看或下载</string>
    <string name="apk_not_install">应用未安装</string>
    <string name="login_error">授期过程出错</string>
    <string name="login_cancel">取消授权</string>
    <string name="login_start">正在启动应用授权</string>
    <string name="bangumi_vodeo">次元番分享专用</string>
    <string name="error_phone">手机号码有误</string>
    <string name="biliplus_hint">输入:投稿号(如:AV221107)/Bili播放页面地址</string>
    <string name="gan_bei">, ( ゜- ゜)つロ 乾杯~</string>
    <string name="biliplus">BiliPlus</string>
    <string name="get_info">获取信息</string>
    <string name="player_video">播放视频</string>
    <string name="download_video">下载视频</string>
    <string name="bilijj_info">这是一个基于web,用于下载bilibili视频的在线应用程序,它能够下载99%bilibili官方视频</string>
    <string name="get_download">获取下载地址</string>
    <string name="new_video">最新视频</string>
    <string name="new_music">最新音频</string>
    <string name="bilijj_hint">输入B站视频ID或地址</string>
    <string name="item_girl">妹子直播</string>
</resources>