<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biliplus"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/primary_text_big" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gan_bei"
                android:textColor="?attr/colorPrimary" />

        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_biliplus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_12">

            <EditText
                android:id="@+id/ed_biliplus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/biliplus_hint"
                android:paddingTop="@dimen/dp_8" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_get_info"
            style="@style/account_btn_textsize"
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:layout_below="@+id/til_search"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/login_btn_bg"
            android:text="@string/get_info"
            android:textSize="17.0sp" />

        <Button
            android:id="@+id/btn_html5_paly"
            style="@style/account_btn_textsize"
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:layout_below="@+id/til_search"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/login_btn_bg"
            android:text="@string/player_video"
            android:textSize="17.0sp" />

        <Button
            android:id="@+id/btn_download"
            style="@style/account_btn_textsize"
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:layout_below="@+id/til_search"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/login_btn_bg"
            android:text="@string/download_video"
            android:textSize="17.0sp" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>




