<?xml version="1.0" encoding="utf-8"?>
<com.fanchen.imovie.view.InterceptCoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:background="?attr/colorControlNormal"
    android:layout_height="fill_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/abl_root"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:contentScrim="?colorPrimary"
            app:layout_scrollFlags="exitUntilCollapsed|scroll">

            <include layout="@layout/layout_video_info" />

            <include layout="@layout/layout_toolbar_video" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nsv_root"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="?attr/colorControlNormal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:text="@string/juji"
                    android:textSize="@dimen/default_medium_text_size" />

                <TextView
                    android:id="@+id/tv_bangumi_more_episode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_15"
                    android:drawableRight="@drawable/ic_light_gray_arrow_right"
                    android:gravity="right"
                    android:text="@string/more_juji" />
            </LinearLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_episode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15" />

            <TextView
                android:id="@+id/tv_non_episode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/non_episode"
                android:visibility="gone" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:background="#33000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:text="@string/jianjie"
                    android:textSize="@dimen/default_medium_text_size" />

                <TextView
                    android:id="@+id/tv_bangumi_more_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_15"
                    android:drawableRight="@drawable/ic_light_gray_arrow_right"
                    android:gravity="right"
                    android:text="@string/more_jianjie" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_bangumi_info"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_34"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:background="#33000000"></View>

            <TextView
                android:id="@+id/tv_video_recom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/fanjutuijian"
                android:textSize="@dimen/default_medium_text_size" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_recom"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15" />

            <TextView
                android:id="@+id/tv_non_recom"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/non_recom"
                android:visibility="gone" />

            <include layout="@layout/item_non_footer"></include>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <com.fanchen.imovie.view.MaterialProgressBar
        android:id="@+id/progressbar_apk"
        android:layout_width="@dimen/mpb_width"
        android:layout_height="@dimen/mpb_width"
        android:layout_gravity="center"
        app:barWidth="5dp"
        app:circleRadius="28dp"
        app:rimWidth="3dp" />

    <com.fanchen.imovie.view.CustomEmptyView
        android:id="@+id/cev_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_gravity="center" />

</com.fanchen.imovie.view.InterceptCoordinatorLayout>

